getUserProfile
